修复重大bug, isToMe导致commandArgs仍然包含命令头